<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="20dp" >

    <FrameLayout
        android:id="@+id/loginframeContainer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        />

    <LinearLayout
        android:background="#FFA500"
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/welcomemsg"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface ="sans"/>

        <EditText
            android:id="@+id/login_emailid"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/emailidsymbol"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/emailid"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="#000"
            android:textColorHint="#000"
            android:textSize="16sp"
            android:typeface ="sans"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black" />

        <EditText
            android:id="@+id/login_password"
            android:singleLine="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/passwordsymbol"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/userpassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#000"
            android:textColorHint="#000"
            android:textSize="16sp"
            android:typeface ="sans"/>


        <Button
            android:id="@+id/loginBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/loginbuttonbckg"
            android:padding="3dp"
            android:text="@string/login"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold"
            android:typeface ="sans"
            />
        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="@color/black" />

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:background="@drawable/signupbuttonbckg"
            android:padding="3dp"
            android:text="@string/registeruser"
            android:textColor="#000"
            android:textSize="17sp"
            android:textStyle="bold"
            android:typeface ="sans"/>

    </LinearLayout>



</RelativeLayout>