<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >
<LinearLayout
    android:layout_width="230dp"
    android:layout_height="350dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_centerVertical="true"
    android:layout_centerHorizontal="true"
    android:weightSum="1"
    android:background="#FFA500"
    android:id="@+id/linearLayout">


    <EditText
        android:layout_marginTop="-100dp"
        android:paddingLeft="20dp"
        android:id="@+id/salarysetup"
        android:layout_width="178dp"
        android:layout_height="60dp"
        android:inputType="number"
        android:hint= "@string/spinnersetup"
        android:background="@android:color/transparent" >
    </EditText>
    <View
        android:layout_width="178dp"
        android:layout_height="0.1px"
        android:background="@color/black" />


    <EditText
        android:paddingLeft="20dp"
        android:id="@+id/recurringbills"
        android:layout_width="178dp"
        android:layout_height="60dp"
        android:text="@string/recurringbills"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        >
    </EditText>


    <ImageButton
        android:id="@+id/moreImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:clickable="true"
        android:contentDescription="@string/recurring_bills_add"
        android:src="@android:drawable/ic_input_add" />

    <EditText
        android:id="@+id/et1"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:background="@drawable/billseditext"/>
    <EditText
        android:layout_marginTop="3dp"
        android:id="@+id/et2"
        android:visibility="gone"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:background="@drawable/billseditext"/>

</LinearLayout>

    <TextView
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:id="@+id/usernamefragment"
        android:typeface ="sans"
        android:textStyle="bold"
        android:layout_weight="0.29"
        android:paddingTop="90dp"
        android:paddingLeft="40dp"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentTop="true"/>
</RelativeLayout>
